# sealedstruct

./: Cargo.toml  LICENSE  README.md
sealedstruct/: Cargo.toml
sealedstruct/src/: lib.rs  stdimpl.rs  wrapper.rs
sealedstruct/tests/: into_nested.rs  into_sealed.rs  nested.rs  seal.rs  simple.rs  stdimpl.rs
sealedstruct_derive/: Cargo.toml
sealedstruct_derive/src/: into_nested.rs  into_sealed.rs  lib.rs  nested.rs  seal.rs  seal_simple.rs  try_into_nested.rs  try_into_sealed.rs  validator.rs
