[package]
edition = "2021"
name = "sealedstruct"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sealedstruct_derive = {path = "../sealedstruct_derive"}
smallvec = {version = "1.0", features = ["const_new"]}
thiserror = "1"
