[package]
edition = "2021"
name = "sealedstruct"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4", optional = true}
sealedstruct_derive = {path = "../sealedstruct_derive"}
serde = {version = "1", optional = true}
smallvec = {version = "1.0", features = ["const_new"]}
thiserror = "1"
uuid = {version = "1", optional = true}

[dev-dependencies]
uuid = {version = "1"}

[[test]]
name = "nested"
path = "tests/nested.rs"
required-features = ["uuid"]
