[package]
edition = "2021"
name = "sealedstruct_derive"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "^1.0.90"

[dev-dependencies]
sealedstruct = {path = "../sealedstruct"}
